# messenger-server

./: Dockerfile  README.md  backend_architecture.md  docker-compose.yaml  main.py  pyproject.toml
app/: main.py
app/api/: deps.py
app/api/v1/: auth.py  conversations.py  messages.py  router.py  sync.py  users.py  ws.py
app/core/: errors.py  logging.py  rate_limit.py  security.py  settings.py
app/db/: session.py
app/models/: __init__.py  conversation.py  message.py  realtime_outbox_event.py  refresh_token.py  user.py
app/realtime/: __init__.py  connection_manager.py  dispatcher.py  protocol.py  publisher.py
app/schemas/: auth.py  conversations.py  messages.py  sync.py  users.py
app/services/: auth_service.py  conversation_service.py  message_service.py  realtime_service.py  user_hydration_service.py
docs/: additional_info.md  architecture_websockets.md  backend_architecture.md  client_websocket_architecture.md  deploy.md
tests/: conftest.py  test_auth.py  test_conversations.py  test_messages.py  test_realtime_dispatcher.py  test_sync.py  test_user_hydration_service.py  test_users_batch.py  test_ws.py
